--- a/theano示例/theano-scan示例.ipynb
+++ b/theano示例/theano-scan示例.ipynb
@@ -10,7 +10,14 @@
    "source": [
     "import theano\n",
     "import theano.tensor as T\n",
-    "import numpy"
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 对序列中的每个元素都执行fn函数"
    ]
   },
   {
@@ -46,8 +53,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 2.,  2.,  2.],\n",
-       "       [ 2.,  2.,  2.]])"
+       "array([[ 1.,  1.,  1.],\n",
+       "       [ 1.,  1.,  1.]])"
       ]
      },
      "execution_count": 4,
@@ -56,13 +63,37 @@
     }
    ],
    "source": [
-    "f(numpy.ones((2,3)).astype(theano.config.floatX))"
+    "matrix = np.ones((2,3))\n",
+    "matrix"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2.,  2.,  2.],\n",
+       "       [ 2.,  2.,  2.]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f(matrix.astype(theano.config.floatX))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a = T.vector()\n",
@@ -73,6 +104,17 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "vector = np.array([1,2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -81,13 +123,13 @@
        "array([ 2.,  3.,  4.])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f(numpy.array([1,2,3], dtype=theano.config.floatX))"
+    "f(vector.astype(theano.config.floatX))"
    ]
   }
  ],
