--- a/theano示例/theano-逻辑回归-情感分类(movie review).ipynb
+++ b/theano示例/theano-逻辑回归-情感分类(movie review).ipynb
@@ -27,7 +27,7 @@
    "source": [
     "def get_data():\n",
     "    \"\"\"\n",
-    "    获取影评数据\n",
+    "    获取movie review影评数据\n",
     "    \"\"\"\n",
     "    dataset = []\n",
     "    y_labels = []\n",
